# cloud_repro

./: BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements.txt
http_server/: BUILD.bazel  main.py  settings.flask.toml
scripts/: install_bazel.sh  setup.sh  shell.sh
src/: BUILD.bazel
