"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")
bazel_dep(name = "aspect_rules_py", version = "0.5.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_multirun", version = "0.8.1")
bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11")

register_toolchains(
    "@python_3_11//:all",
)

pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "pip",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
