"Bazel dependencies"

bazel_dep(name = "aspect_rules_py", version = "1.6.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_uv", version = "0.77.0")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11")

register_toolchains(
    "@python_3_11//:all",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version="3.11",
    requirements_lock="//:requirements.txt",
)
use_repo(pip, "pypi")
