load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@workspace_python_deps//:requirements.bzl", "requirement")

HTTP_PORT = 7777

multirun(
    name = "multirun",
    commands = [":run_http_server"],
)
command(
    name = "run_http_server",
    command = ":http_server",
)

py_library(
    name = "src",
    srcs = glob(["**/*.py"]),
    imports = [
        ".",
    ],
    deps = [
        requirement("flask"),
        requirement("flask-cors"),
        requirement("opentelemetry-api"),
        requirement("opentelemetry-exporter-otlp-proto-http"),
        requirement("opentelemetry-instrumentation"),
        requirement("opentelemetry-instrumentation-flask"),
        requirement("opentelemetry-instrumentation-fastapi"),
        requirement("opentelemetry-instrumentation-requests"),
        requirement("opentelemetry-sdk"),
    ],
)

py_binary(
    name = "http_server",
    main = "main.py",
    deps = [
        ":src",
    ],
)
