load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@pypi//:requirements.bzl", "requirement")


py_library(
    name = "http_server_src",
    srcs = ["main.py", "server.py", "__init__.py"],
    deps = [
        requirement("fastapi"),
        requirement("uvicorn"),
    ],
)

py_binary(
    name = "http_server",
    main = "main.py",
    srcs = [":http_server_src"],
    deps = [
        ":http_server_src",
    ],
)
